src/test/deca/syntax/valid/homemade/empty.deca
// Description :
//      Empty program
//
// Results :
//
// History :
//      created on 9/01/2020

// wow such empty, and this is the end of the file too !!!!!!!